# hnn-double-pendulum

./: .gitattributes  .gitignore  README.md  pyproject.toml  train.py
.github/workflows/: ci.yml
data/: README.md  generate.py
eval/: __init__.py  animate.py  energy_drift.py  sensitivity.py  trajectory_error.py
models/: __init__.py  hnn.py  mlp_baseline.py
notebooks/: figures.ipynb
physics/: __init__.py  derivation.md  double_pendulum.py  integrators.py
tests/: test_hnn_shape.py  test_integrators.py  test_training_smoke.py
